logs/xoutil.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xoutil'...
Listing './lib/python3.5/site-packages/xoutil/benchmark'...
Listing './lib/python3.5/site-packages/xoutil/cli'...
Listing './lib/python3.5/site-packages/xoutil/decorator'...
Listing './lib/python3.5/site-packages/xoutil/dim'...
Listing './lib/python3.5/site-packages/xoutil/eight'...
Compiling './lib/python3.5/site-packages/xoutil/eight/_throw2.py'...
***   File "./lib/python3.5/site-packages/xoutil/eight/_throw2.py", line 14
    raise error, None, tb
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/xoutil/eight/urllib'...
Listing './lib/python3.5/site-packages/xoutil/fp'...
Listing './lib/python3.5/site-packages/xoutil/fp/prove'...
Listing './lib/python3.5/site-packages/xoutil/fs'...
Listing './lib/python3.5/site-packages/xoutil/future'...
Listing './lib/python3.5/site-packages/xoutil/html'...
Listing './lib/python3.5/site-packages/xoutil/tasking'...
Listing './lib/python3.5/site-packages/xoutil/testing'...
Listing './lib/python3.5/site-packages/xoutil/validators'...
Listing './lib/python3.5/site-packages/xoutil/values'...
Listing './lib/python3.5/site-packages/xoutil-1.8.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
